<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:visible="true"
        android:enabled="true"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/localization_setting"
                android:title="@string/language_setting"
                />
            <item
                android:id="@+id/notification_setting"
                android:title="@string/notification_setting"
                />
        </menu>
    </item>
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite_menu"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:visible="true"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>
</menu>